FIX: reformat code